fix alignment issues for smaller zoom

--- a/templates/insurance-page/insurance-page.css
+++ b/templates/insurance-page/insurance-page.css
@@ -266,7 +266,6 @@
   display: flex;
   align-items: center;
   padding: 0;
-  width: 50%;
 
   @media (max-width: 768px) {
     width: 100%;
